fix: bug for about-right text overflowing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,12 +182,13 @@ footer a {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    align-items: center;
     justify-content: center;
 }
 
 #about-right {
     width: 50%;
-    height: 344px;
+    height: fit-content;
     background-color: rgba(255, 179, 15, 0.3);
     padding: 20px;
     margin-left: 50px;
